feat: :lipstick: add component notes

--- a/src/assets/scss/icon.scss
+++ b/src/assets/scss/icon.scss
@@ -134,6 +134,9 @@
 .icon-down {
 	mask-image: url('../multimedia/icons/down.svg');
 }
+.icon-notepad {
+	mask-image: url('../multimedia/icons/icon-notepad.svg');
+}
 .animated {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
