--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -30,3 +30,8 @@
 .shadow-1 {
 	box-shadow: 0px 2px 12px -3px #9baebe;
 }
+
+.text-sub-category {
+	color: white;
+	text-shadow: 0px 0px 2px #c0c0c0;
+}
