--- a/src/home/dashboard/gestion-de-archivos/components/lazyImages/images.scss
+++ b/src/home/dashboard/gestion-de-archivos/components/lazyImages/images.scss
@@ -1,21 +1,21 @@
-.image-default {
-	border-radius: 0.3rem;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	.content-img {
-		width: 100%;
-		height: 100%;
-		span {
-			height: 100%;
-			width: 100%;
-			display: flex;
-		}
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			object-position: center;
-		}
-	}
-}
+// .image-default {
+// 	border-radius: 0.3rem;
+// 	width: 100%;
+// 	height: 100%;
+// 	overflow: hidden;
+// 	.content-img {
+// 		width: 100%;
+// 		height: 100%;
+// 		span {
+// 			height: 100%;
+// 			width: 100%;
+// 			display: flex;
+// 		}
+// 		img {
+// 			width: 100%;
+// 			height: 100%;
+// 			object-fit: cover;
+// 			object-position: center;
+// 		}
+// 	}
+// }
