feat: :lipstick: add input toogle

--- a/src/assets/scss/icon.scss
+++ b/src/assets/scss/icon.scss
@@ -137,6 +137,9 @@
 .icon-notepad {
 	mask-image: url('../multimedia/icons/icon-notepad.svg');
 }
+.icon-down-select {
+	mask-image: url('../multimedia/icons/down.svg');
+}
 .animated {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
