add input image

--- a/src/assets/scss/icon.scss
+++ b/src/assets/scss/icon.scss
@@ -140,6 +140,9 @@
 .icon-down-select {
 	mask-image: url('../multimedia/icons/down.svg');
 }
+.icon-plus {
+	mask-image: url('../multimedia/icons/icon-plus.svg');
+}
 .animated {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
