--- a/src/assets/scss/icon.scss
+++ b/src/assets/scss/icon.scss
@@ -143,6 +143,9 @@
 .icon-plus {
 	mask-image: url('../multimedia/icons/icon-plus.svg');
 }
+.icon-all {
+	mask-image: url('../multimedia/icons/icon-all.svg');
+}
 .animated {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
