--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -35,7 +35,9 @@
 .shadow-1 {
 	box-shadow: 0px 2px 12px -3px #28465861;
 }
-
+.text-wrap-balance {
+	text-wrap: balance;
+}
 .text-sub-category {
 	color: white;
 	text-shadow: 0px 0px 2px #c0c0c0;
