--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -129,3 +129,7 @@ input.--invalid {
 	width: 100% !important;
 	display: flex;
 }
+
+.grid-rows-max-content {
+	grid-template-rows: max-content;
+}
