chore: :lipstick: add function for sidebar categories

--- a/src/assets/scss/icon.scss
+++ b/src/assets/scss/icon.scss
@@ -146,6 +146,9 @@
 .icon-all {
 	mask-image: url('../multimedia/icons/icon-all.svg');
 }
+.icon-sidebar {
+	mask-image: url('../multimedia/icons/sidebar.svg');
+}
 .animated {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
