--- a/src/components/modalupload/modalUpload.scss
+++ b/src/components/modalupload/modalUpload.scss
@@ -149,7 +149,7 @@
 					width: 1.7rem;
 					height: 1.7rem;
 					border-radius: 10rem;
-					position: absolute;
+					position: relative;
 					right: 0;
 					top: 0;
 					bottom: 0;
